<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.OverviewFragment">


    <ImageView
        android:id="@+id/img_sEmail"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_email"
        app:srcCompat="@drawable/ic_mail_black_24dp" />

    <TextView
        android:id="@+id/tv_detail_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        tools:text="@string/email"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_sEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_sUserUrl"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_userUrl"
        app:layout_constraintStart_toStartOf="@+id/img_sEmail"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_userUrl"
        app:srcCompat="@drawable/ic_link_black_24dp" />

    <TextView
        android:id="@+id/tv_detail_userUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:text="UserUrl"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_sUserUrl"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_email" />

    <ImageView
        android:id="@+id/img_sCompany"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_company"
        app:layout_constraintStart_toStartOf="@+id/img_sEmail"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_company"
        app:srcCompat="@drawable/ic_company_black_24dp" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:text="@string/company"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_sCompany"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_userUrl" />

    <ImageView
        android:id="@+id/img_sLocation"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_location"
        app:layout_constraintStart_toStartOf="@+id/img_sEmail"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_location"
        app:srcCompat="@drawable/ic_location_black_24dp" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:text="@string/location"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_sLocation"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company" />

</androidx.constraintlayout.widget.ConstraintLayout>